# air-link

./: Cargo.toml  readme.md  run_tests.sh
.cargo/: config.toml
certs/: cert.pem  key.pem
crates/apps/air-client/: Cargo.toml
crates/apps/air-client/src/: delegator.rs  error.rs  event.rs  lib.rs  main.rs
crates/apps/air-client/src/keycodes/: mod.rs
crates/apps/air-client/src/wayland/: error.rs  mod.rs
crates/apps/air-client/src/wayland/state/: keyboard.rs  mod.rs  output.rs  pointer.rs  registry.rs  seat.rs  xdg.rs
crates/apps/air-client/src/windows/: error.rs  mod.rs
crates/apps/air-client/src/x11/: mod.rs
crates/apps/air-server/: Cargo.toml
crates/apps/air-server/src/: error.rs  lib.rs  main.rs  modifier.rs
crates/apps/air_client/: Cargo.toml
crates/apps/air_client/src/: config.rs  display.rs  error.rs  lib.rs  main.rs
crates/apps/air_client/src/dispatcher/: error.rs  mod.rs
crates/apps/air_client/src/dispatcher/wayland/: mod.rs  state.rs
crates/apps/air_client/src/dispatcher/wayland/handlers/: keyboard.rs  mod.rs  output.rs  pointer.rs  registry.rs  seat.rs  xdg.rs
crates/apps/air_client/src/handler/: error.rs  mod.rs
crates/apps/air_server/: Cargo.toml
crates/apps/air_server/src/: config.rs  error.rs  input.rs  lib.rs  main.rs
crates/libs/lib-codec/: Cargo.toml
crates/libs/lib-codec/src/: lib.rs
crates/libs/lib-models/: Cargo.toml
crates/libs/lib-models/src/: answer.rs  clipboard.rs  command.rs  display.rs  keyboard.rs  lib.rs  mouse.rs
