[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = ""
authors = ["grapple228 <greenapple228882@yandex.ru>"]
readme = "readme.md"
repository = "https://github.com/grapple228/air-link.git"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 } # For exploratory dev.

[workspace]
resolver = "2"
members = [
    # -- Apps
    "crates/apps/air-client", 
    "crates/apps/air-server",

    # -- Application Libraries
    "crates/libs/lib-codec",
    "crates/libs/lib-models", 

    # -- Tools
]

[workspace.dependencies]
# My libs
grapple_utils = { version = "*", features = ["b64", "b58", "cuuid"] }

# Websocket
tokio-tungstenite = { version = "0.27"}

# Mouse and Keyboard events
enigo = {version = "0.5", features = ["wayland"]}

# Bytes serialization and deserialization
bincode = {version = "2", features = []}

# Async
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3"}

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

#Other
derive_more = {version = "1", features = ["from"] }
clipboard = "0.5"

# Dev
anyhow = "1"
httpc-test = "0.1"
serial_test = "2"
