[package]
name = "air-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# -- My Libs
grapple_utils = { workspace = true }

# -- App Libs
lib-codec = { path = "../../libs/lib-codec" }
lib-models = { path = "../../libs/lib-models" }

# Websocket
tokio-tungstenite = { workspace = true }

# Mouse and Keyboard events
wayland-client = "0.31"  
wayland-protocols = "0.32"
tempfile = "3.20"

# -- Async
futures = {workspace = true }
tokio = { workspace = true }

# -- Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# -- Other
derive_more = { workspace = true }
cli-clipboard = "0.4.0" 

[dev-dependencies]
anyhow = { workspace = true }
httpc-test = { workspace = true }
serial_test = { workspace = true }
chrono = "0.4"