[package]
name = "air-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# -- My Libs
grapple_utils = { workspace = true }

# -- App Libs
lib-codec = { path = "../../libs/lib-codec" }
lib-models = { path = "../../libs/lib-models" }

# Websocket
tokio-tungstenite = { workspace = true }

# -- Async
futures = { workspace = true }
tokio = { workspace = true }

# -- Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# -- Other
derive_more = { workspace = true }
tempfile = "3.20"
cli-clipboard = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
# Mouse and Keyboard events
wayland-client = "0.31"
wayland-protocols = "0.32"


[dev-dependencies]
anyhow = { workspace = true }
chrono = "0.4"
