[package]
name = "air-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# -- My Libs
grapple_utils = { workspace = true }

# -- App Libs
lib-codec = { path = "../../libs/lib-codec" }
lib-models = { path = "../../libs/lib-models" }

# Websocket
tokio-tungstenite = { workspace = true }

# Mouse and Keyboard events
enigo = {workspace = true}

# -- Async
tokio = { workspace = true }
futures = {workspace = true }

# -- Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# -- Other
derive_more = { workspace = true }
chrono = "0.4"

[dev-dependencies]
anyhow = { workspace = true }
chrono = "0.4"
