[package]
name = "air_client"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# -- My Libs
grapple_utils = { workspace = true }

# -- App Libs
lib-codec = { path = "../../libs/lib-codec" }
lib-models = { path = "../../libs/lib-models" }
lib_protocol = { path = "../../libs/lib_protocol" }
lib_quic = { path = "../../libs/lib_quic" }

# Mouse and Keyboard events
enigo = {workspace = true}

# -- Async
tokio = { workspace = true }
futures = {workspace = true }

# -- Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# -- Other
tempfile = "3"
derive_more = { workspace = true }
flume = "0.12.0"
enum_dispatch = "0.3.13"

[target.'cfg(target_os = "linux")'.dependencies]
# Mouse and Keyboard events
wayland-client = "0.31.14"
wayland-protocols = {version = "0.32.12", features = ["client"]}
wayland-protocols-wlr = {version = "0.3.12", features = ["client"]}

[dev-dependencies]
anyhow = { workspace = true }

[profile.release]
strip = true           # удалить debug-символы
lto = true             # link-time optimization
opt-level = 0        # оптимизация на размер
codegen-units = 1      # больше оптимизаций
