[package]
name = "air_server"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# -- My Libs
grapple_utils = { workspace = true }

# -- App Libs
lib-codec = { path = "../../libs/lib-codec" }
lib-models = { path = "../../libs/lib-models" }
lib_protocol = { path = "../../libs/lib_protocol" }
lib_quic = { path = "../../libs/lib_quic" }

# -- Async
tokio = { workspace = true }

# -- Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
flume = "0.12.0"

# -- Other
derive_more = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
mouce = { version = "0.3", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
enigo = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
enigo = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[profile.release]
strip = true           # удалить debug-символы
lto = true             # link-time optimization
opt-level = 0        # оптимизация на размер
codegen-units = 1      # больше оптимизаций
