[package]
name = "lib-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# -- My Libs
grapple_utils = { workspace = true }

# Bytes serialization and deserialization
bincode = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

