[package]
name = "lib-models"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# -- My Libs
grapple_utils = { workspace = true }

# -- App Libs
lib-codec = { path = "../../libs/lib-codec" }

# Websocket
tokio-tungstenite = { workspace = true }

# Bytes serialization and deserialization
bincode = { workspace = true }